# mindfuck

examples/mindfuck/: Cargo.toml
examples/mindfuck/core/: Cargo.toml
examples/mindfuck/core/src/: lib.rs
examples/mindfuck/methods/: Cargo.toml
examples/mindfuck/methods/guest/: Cargo.toml
examples/mindfuck/methods/guest/src/: main.rs
examples/mindfuck/res/: exploit.bf
examples/mindfuck/src/: main.rs
